# Drift

./: .gitignore  .vercelignore  Cargo.toml  README.md  ai-search-visibility-report.json  extension.crx  next.config.mjs  package-lock.json  package.json  test-slugs.js
apps/desktop/: package.json
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
electron/: main.js  preload.js  server.js
extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js  recorder.html  recorder.js  test.html
public/: llms-full.txt  llms.txt
public/.well-known/: ai-plugin.json  security.txt
scripts/: setup.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: ai.rs  capture.rs  compositor.rs  export.rs  hotkeys.rs  input.rs  mod.rs  native_capture.rs  zoom.rs
src-tauri/src/rendering/: cursor_interpolation.rs  mod.rs  spring_physics.rs  zoom_interpolation.rs
src-tauri/src/shaders/: background.wgsl  composite_video_frame.wgsl  cursor.wgsl
src/app/: globals.css  layout.js  page.js  robots.js  sitemap.js
src/app/components/: AIContent.jsx  DriftBackground.jsx  Features.jsx  Footer.jsx  Hero.jsx  HowItWorks.jsx  InstallGuide.jsx  Navbar.jsx  ProductHuntBadge.jsx  TauriRedirect.jsx  ThemeProvider.jsx  UsageGuide.jsx  WaitlistForm.jsx
src/app/editor/: page.js
src/context/: RecordingContext.jsx
src/hooks/: useMediaCapture.js
src/lib/: CanvasCompositor.js  CursorTracker.js  DriftEngine.js  ExportEngine.js  StudioEngine.js  ZoomEngine.js  ffmpegExport.js  tauri-bridge.js
src/lib/ai/: index.js  (+8 more)
(+76 files in other folders)
