[package]
name = "drift"
version = "2.0.0"
description = "Cinema-grade screen recording with AI-powered zoom"
authors = ["Drift Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
rdev = "0.5"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
once_cell = "1.19"
parking_lot = "0.12"
xcap = "0.0.14"
image = "0.25"
wgpu = "24"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
chrono = "0.4"
dirs-next = "2.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = "s"          # Optimize for size
lto = true                # Link-time optimization — strips unused code
codegen-units = 1         # Single codegen unit — slower compile, smaller binary
panic = "abort"           # No unwind tables
strip = true              # Strip symbols from binary
